# PokeMCP

./: .env.example  .gitignore  Makefile  README.md  api.py  client.py  main.py  pyproject.toml
auth/: __init__.py  client_auth.py  supabase_auth_provider.py  supabase_client.py
core/: api_client.py
domains/: pokemon.py  type.py
